[tool.poetry]
name = "wield-node-restart"
version = "0.1.0"
description = ""
authors = ["Tori Takashi <tori.toutoshi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
